--- a/sass/layout/_project.scss
+++ b/sass/layout/_project.scss
@@ -2,6 +2,8 @@
   @include setWidth;
   text-align: center;
 
+  margin-top: 3rem;
+
   &__container {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
